--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +8,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.fjc.guedr.MainActivity">
+    tools:context="com.fjc.guedr.MainActivity"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView"/>
+        android:text="@string/hello_word"
+        android:id="@+id/textView"
+        android:layout_weight="0"/>
 
-    <Button
+    <ImageView
+        android:contentDescription="@string/offline_wheather_image_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hola Mundio"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+        android:src="@drawable/offline_weather"
+        android:layout_weight="1"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/change_american_system"
+        android:id="@+id/change_to_american_btn"
+        android:layout_weight="0"
+        android:layout_gravity="center_horizontal"/>
+</LinearLayout>
