--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_weight="0"/>
 
     <ImageView
+        android:id="@+id/forecast"
         android:contentDescription="@string/offline_wheather_image_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
