--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,14 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/change_european_system"
+        android:id="@+id/change_to_european_btn"
+        android:layout_weight="0"
+        android:layout_gravity="center_horizontal"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/change_american_system"
         android:id="@+id/change_to_american_btn"
         android:layout_weight="0"
